tests/ui/duplicate-fmt.stderr
error: only one #[error(...)] attribute is allowed
 --> tests/ui/duplicate-fmt.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^

error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> tests/ui/duplicate-fmt.rs:6:12
  |
6 | pub struct Error;
  |            ^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
